// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots dag/basic editable mode 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <svg
    className="dag-wrapper Dag-root-7"
    height={500}
    onDoubleClick={[Function]}
    onMouseMove={[Function]}
    width={500}
  >
    <g
      className="graph"
    >
      <line
        className="connect-node Dag-dagEdge-10"
        onClick={[Function]}
      />
      <line
        className="connect-node Dag-dagEdge-10"
        onClick={[Function]}
      />
      <line
        className="connect-node Dag-dagEdge-10"
        onClick={[Function]}
      />
      <line
        className="connect-node Dag-dagEdge-10"
        onClick={[Function]}
      />
      <line
        className="connect-node Dag-dagEdge-10"
        onClick={[Function]}
      />
      <line
        className="connect-node Dag-dagEdge-10"
        onClick={[Function]}
      />
      <g
        className="node Dag-dagNode-8"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-9"
        />
      </g>
      <g
        className="node Dag-dagNode-8"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-9"
        />
      </g>
      <g
        className="node Dag-dagNode-8"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-9"
        />
      </g>
      <g
        className="node Dag-dagNode-8"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-9"
        />
      </g>
      <g
        className="node Dag-dagNode-8"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-9"
        />
      </g>
      <g
        className="node Dag-dagNode-8"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-9"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots dag/basic no wrapper 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <svg
    className="dag-wrapper Dag-root-1"
    height={500}
    onDoubleClick={[Function]}
    onMouseMove={[Function]}
    width={500}
  >
    <g
      className="graph"
    >
      <line
        className="connect-node Dag-dagEdge-4"
        onClick={[Function]}
      />
      <line
        className="connect-node Dag-dagEdge-4"
        onClick={[Function]}
      />
      <line
        className="connect-node Dag-dagEdge-4"
        onClick={[Function]}
      />
      <line
        className="connect-node Dag-dagEdge-4"
        onClick={[Function]}
      />
      <line
        className="connect-node Dag-dagEdge-4"
        onClick={[Function]}
      />
      <line
        className="connect-node Dag-dagEdge-4"
        onClick={[Function]}
      />
      <g
        className="node Dag-dagNode-2"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="node Dag-dagNode-2"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="node Dag-dagNode-2"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="node Dag-dagNode-2"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="node Dag-dagNode-2"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
      <g
        className="node Dag-dagNode-2"
        onClick={[Function]}
      >
        <circle />
        <text
          className="Dag-dagNodeText-3"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Storyshots dag/themed paper wrapper (dark) 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100vw",
    }
  }
>
  <div
    className="MuiPaper-root-46 MuiPaper-elevation2-50 MuiPaper-rounded-47"
    style={
      Object {
        "height": "500px",
        "width": "500px",
      }
    }
  >
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <svg
        className="dag-wrapper Dag-root-73"
        height={500}
        onDoubleClick={[Function]}
        onMouseMove={[Function]}
        width={500}
      >
        <g
          className="graph"
        >
          <line
            className="connect-node Dag-dagEdge-76"
            onClick={[Function]}
          />
          <line
            className="connect-node Dag-dagEdge-76"
            onClick={[Function]}
          />
          <line
            className="connect-node Dag-dagEdge-76"
            onClick={[Function]}
          />
          <line
            className="connect-node Dag-dagEdge-76"
            onClick={[Function]}
          />
          <line
            className="connect-node Dag-dagEdge-76"
            onClick={[Function]}
          />
          <line
            className="connect-node Dag-dagEdge-76"
            onClick={[Function]}
          />
          <g
            className="node Dag-dagNode-74"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-75"
            />
          </g>
          <g
            className="node Dag-dagNode-74"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-75"
            />
          </g>
          <g
            className="node Dag-dagNode-74"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-75"
            />
          </g>
          <g
            className="node Dag-dagNode-74"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-75"
            />
          </g>
          <g
            className="node Dag-dagNode-74"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-75"
            />
          </g>
          <g
            className="node Dag-dagNode-74"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-75"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots dag/themed paper wrapper (light) 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "width": "100vw",
    }
  }
>
  <div
    className="MuiPaper-root-13 MuiPaper-elevation2-17 MuiPaper-rounded-14"
    style={
      Object {
        "height": "500px",
        "width": "500px",
      }
    }
  >
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <svg
        className="dag-wrapper Dag-root-40"
        height={500}
        onDoubleClick={[Function]}
        onMouseMove={[Function]}
        width={500}
      >
        <g
          className="graph"
        >
          <line
            className="connect-node Dag-dagEdge-43"
            onClick={[Function]}
          />
          <line
            className="connect-node Dag-dagEdge-43"
            onClick={[Function]}
          />
          <line
            className="connect-node Dag-dagEdge-43"
            onClick={[Function]}
          />
          <line
            className="connect-node Dag-dagEdge-43"
            onClick={[Function]}
          />
          <line
            className="connect-node Dag-dagEdge-43"
            onClick={[Function]}
          />
          <line
            className="connect-node Dag-dagEdge-43"
            onClick={[Function]}
          />
          <g
            className="node Dag-dagNode-41"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-42"
            />
          </g>
          <g
            className="node Dag-dagNode-41"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-42"
            />
          </g>
          <g
            className="node Dag-dagNode-41"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-42"
            />
          </g>
          <g
            className="node Dag-dagNode-41"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-42"
            />
          </g>
          <g
            className="node Dag-dagNode-41"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-42"
            />
          </g>
          <g
            className="node Dag-dagNode-41"
            onClick={[Function]}
          >
            <circle />
            <text
              className="Dag-dagNodeText-42"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
